don't accidentially copy inputs for prior stages

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,11 +73,11 @@
             "python": "${workspaceFolder}/.vscode/get_poetry_python.sh",
             "justMyCode": false,
             "args": [
-                // "--debug",
+                "--debug",
                 // "--force",
                 "process",
                 "auto",
-                // "--no-masters",
+                "--no-masters",
             ]
         },
         {
