--- a/src/starbash/defaults/starbash.toml
+++ b/src/starbash/defaults/starbash.toml
@@ -3,6 +3,42 @@
 [repo]
 kind = "preferences"
 
+# Add our built-in recipes (FIXME, add a "resource" repo type for directories we expect to find inside
+# our python blob)
+# url = "pkg://recipes"
+# We now (finally) fetch our recipes from the sister github repo via http - We use tags (for now) to bind to
+# a particular version of the repo
+recipe_default = "https://raw.githubusercontent.com/geeksville/starbash-recipes/v0.1.29"
+
+# FIXME until doit is merged into main, pull recipes from the the local git submodule
+# url = "file:///workspaces/starbash/starbash-recipes"
+
+# [[repo-ref]]
+
+# recipe repos contain recipes (identified by name).  When any sb.toml file references
+# a recipe the current path of all sources is searched to find that named recipe.
+
+# the standard config includes a few key recipe repos, but interested users or tool
+# vendors can define/provide their own
+
+# add a place to find FOO.sb.toml files
+# url = "http://fixme.com/foo-repo/somedir"
+
+# test data.  Moved to user preferences (where it should should have been all along)
+# [[repo-ref]]
+# dir = "~/Pictures/telescope/from_astroboy"
+# or inband?
+
+
+# allow including multiple recipes FIXME old idea, not sure if needed.
+# [[repo-ref]]
+
+# looks for a file with this name and .py for the code and .toml for the config
+# we'll expect that toml file to contain various [[recipe.*]] sections which will be loaded at this
+# location in the sequence as if they were defined here
+#by-file = "process-osc-dual-duo"
+#by-url = "http:..."
+
 [aliases]
 # aliases can be used to map non standard (or non english) frame names to standard terms
 # This is also used to map filters based on common misspellings or variations.
@@ -49,42 +85,3 @@ SiiHb = ["SiiHb", "S2Hb"]
 # List the initial search path to find other repos, when the app launches it always first loads this sb.toml file and this file should list all of the
 # standard default repo locations.  When searching repos, repos listed LAST have precedence, so target file can override the root processing defaults,
 # then the user prefs, then a live github URL or whatever
-
-[[repo-ref]]
-
-# Add our built-in recipes (FIXME, add a "resource" repo type for directories we expect to find inside
-# our python blob)
-# url = "pkg://recipes"
-# We now (finally) fetch our recipes from the sister github repo via http - We use tags (for now) to bind to
-# a particular version of the repo
-url = "https://raw.githubusercontent.com/geeksville/starbash-recipes/v0.1.29"
-# FIXME until doit is merged into main, pull recipes from the the local git submodule
-# url = "file:///workspaces/starbash/starbash-recipes"
-
-# [[repo-ref]]
-
-# recipe repos contain recipes (identified by name).  When any sb.toml file references
-# a recipe the current path of all sources is searched to find that named recipe.
-
-# the standard config includes a few key recipe repos, but interested users or tool
-# vendors can define/provide their own
-
-# add a place to find FOO.sb.toml files
-# url = "http://fixme.com/foo-repo/somedir"
-
-# test data.  Moved to user preferences (where it should should have been all along)
-# [[repo-ref]]
-# dir = "~/Pictures/telescope/from_astroboy"
-
-
-# or inband?
-
-
-# allow including multiple recipes FIXME old idea, not sure if needed.
-# [[repo-ref]]
-
-# looks for a file with this name and .py for the code and .toml for the config
-# we'll expect that toml file to contain various [[recipe.*]] sections which will be loaded at this
-# location in the sequence as if they were defined here
-#by-file = "process-osc-dual-duo"
-#by-url = "http:..."
