better symlink warnings on windows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,8 +73,8 @@
             "python": "${workspaceFolder}/.vscode/get_poetry_python.sh",
             "justMyCode": false,
             "args": [
-                "--debug",
-                // "--force",
+                // "--debug",
+                "--force",
                 "process",
                 "auto",
                 "--no-masters",
