--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -74,7 +74,7 @@
             "justMyCode": false,
             "args": [
                 "--debug",
-                "--force",
+                // "--force",
                 "process",
                 "auto",
                 "--no-masters",
