--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -77,7 +77,7 @@
                 // "--force",
                 "process",
                 "auto",
-                "--no-masters",
+                // "--no-masters",
             ]
         },
         {
@@ -149,7 +149,7 @@
             "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
         },
         {
-            "name": "Python Debugger: PyTest",
+            "name": "Python Debugger: integration test",
             "type": "debugpy",
             "request": "launch",
             "module": "pytest",
