--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -77,7 +77,7 @@
                 // "--force",
                 "process",
                 "auto",
-                // "--no-masters",
+                "--no-masters",
             ]
         },
         {
