--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -77,7 +77,7 @@
                 // "--force",
                 "process",
                 "auto",
-                "--no-masters",
+                // "--no-masters",
             ]
         },
         {
@@ -107,7 +107,9 @@
                 "--debug",
                 "repo",
                 "add",
-                "/test-data/seestar"
+                "--master",
+                "./images/masters"
+                // "/test-data/seestar"
             ]
         },
         {
