--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ markers = [
 # --tb=short shows shorter tracebacks
 # -rA shows summary of all test outcomes at end
 # --ignore excludes third-party test directories
-addopts = "-m 'not slow and not integration' -n auto --tb=short -rA --ignore=GraXpert"
+addopts = "-m 'not slow and not integration' -n auto --tb=short -rA --ignore=GraXpert --ignore=textual --ignore=starbash-recipes"
 
 # Note: To limit captured output further, you can:
 # 1. Use --tb=line for minimal tracebacks
