Veralux experiment works!
┏━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ Target ┃                       Session ┃  Status   ┃ Notes (links are clickable!)                  ┃
┡━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
│ m13    │ 2025-08-25:light_None_gain100 │ Ø Current │ light_vs_dark_m13_s24 → bkg_pp_light_s24_.seq │
│ m13    │ 2025-08-25:light_None_gain100 │ Ø Current │ stack_osc_m13 → stacked.fits                  │
│ m13    │ 2025-08-25:light_None_gain100 │ Ø Current │ background_m13_i0 → bk_stacked.fits           │
│ m13    │ 2025-08-25:light_None_gain100 │ Ø Current │ veralux_m13 → hms_bk_stacked.fits             │
│ m13    │ 2025-08-25:light_None_gain100 │ ✓ Success │ thumbnail_m13 → hms_bk_stacked.jpg            │
└────────┴───────────────────────────────┴───────────┴───────────────────────────────────────────────┘

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,7 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.debugpy.justMyCode": false
+    "python.debugpy.justMyCode": false,
+    // Turned off because we manually enable it in the post-create.sh 
+    "terminal.integrated.shellIntegration.enabled": false
 }
