--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,10 @@ textual = "^6.8.0"
 # graxpert = {path = "GraXpert", extras = ["cpuonly"], develop = true}
 graxpert = {version = "^3.2.0a2", extras = ["cpuonly"]}
 
-# The following two libs are only needed for the experiment of running siril scripts directly...
+# The following two libs are only needed for the (temporary) experiment of running siril scripts directly...
 # experimenting with siril-scripts/processing/VeraLux_HyperMetric_Stretch.py
-#numpy = "2.2.6"
-#pyqt6 = "^6.10.1"
+numpy = "2.2.6"
+pyqt6 = "^6.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.4.2,<9.0.0"
